--- a/main.ipynb
+++ b/main.ipynb
@@ -32,15 +32,77 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'visualize_eeg_on_headmap' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# What kind of information are we dealing with? let's get some intuition about the participants.\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_visualization\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m visualize_non_eeg_data \u001b[38;5;28;01mas\u001b[39;00m visualize_non_eeg_data\n\u001b[1;32m      4\u001b[0m visualize_non_eeg_data(df)\n",
-      "File \u001b[0;32m~/Desktop/Neuroscience/Year 2/1st semester/Advenced programming in Python/מטלות בית/python_final_project/src/data_visualization.py:125\u001b[0m\n\u001b[1;32m    121\u001b[0m     evoked\u001b[38;5;241m.\u001b[39mplot_topomap(times\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauto\u001b[39m\u001b[38;5;124m'\u001b[39m, ch_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124meeg\u001b[39m\u001b[38;5;124m'\u001b[39m, show\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    123\u001b[0m \u001b[38;5;66;03m# Example usage:\u001b[39;00m\n\u001b[1;32m    124\u001b[0m \u001b[38;5;66;03m# Assuming combined_output is the DataFrame from the previous function\u001b[39;00m\n\u001b[0;32m--> 125\u001b[0m \u001b[43mvisualize_eeg_on_headmap\u001b[49m(combined_output, frequency_band\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdelta\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'visualize_eeg_on_headmap' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Dataset Overview (Categorical Columns Only)\n",
+      "--------------------------------------------------\n",
+      "Categorical Data shape: (945, 8)\n",
+      "\n",
+      "Column Names and Data Types:\n",
+      "no.                    int64\n",
+      "sex                   object\n",
+      "age                  float64\n",
+      "eeg.date              object\n",
+      "education            float64\n",
+      "IQ                   float64\n",
+      "main.disorder         object\n",
+      "specific.disorder     object\n",
+      "dtype: object\n",
+      "\n",
+      "Missing Values:\n",
+      "no.                   0\n",
+      "sex                   0\n",
+      "age                   0\n",
+      "eeg.date              0\n",
+      "education            15\n",
+      "IQ                   13\n",
+      "main.disorder         0\n",
+      "specific.disorder     0\n",
+      "dtype: int64\n",
+      "\n",
+      "Descriptive Statistics:\n",
+      "               no.  sex         age   eeg.date   education          IQ  \\\n",
+      "count   945.000000  945  945.000000        945  930.000000  932.000000   \n",
+      "unique         NaN    2         NaN        722         NaN         NaN   \n",
+      "top            NaN    M         NaN  2018.7.17         NaN         NaN   \n",
+      "freq           NaN  601         NaN          5         NaN         NaN   \n",
+      "mean    473.000000  NaN   30.594804        NaN   13.438710  101.580472   \n",
+      "std     272.942302  NaN   11.781592        NaN    2.550461   17.022414   \n",
+      "min       1.000000  NaN   18.000000        NaN    0.000000   49.000000   \n",
+      "25%     237.000000  NaN   21.730000        NaN   12.000000   91.000000   \n",
+      "50%     473.000000  NaN   26.150000        NaN   13.000000  102.000000   \n",
+      "75%     709.000000  NaN   35.450000        NaN   16.000000  114.000000   \n",
+      "max     945.000000  NaN   71.880000        NaN   20.000000  145.000000   \n",
+      "\n",
+      "        main.disorder    specific.disorder  \n",
+      "count             945                  945  \n",
+      "unique              7                   12  \n",
+      "top     Mood disorder  Depressive disorder  \n",
+      "freq              266                  199  \n",
+      "mean              NaN                  NaN  \n",
+      "std               NaN                  NaN  \n",
+      "min               NaN                  NaN  \n",
+      "25%               NaN                  NaN  \n",
+      "50%               NaN                  NaN  \n",
+      "75%               NaN                  NaN  \n",
+      "max               NaN                  NaN  \n",
+      "\n",
+      "First 5 Rows of the Filtered DataFrame:\n",
+      "   no. sex   age    eeg.date  education     IQ       main.disorder  \\\n",
+      "0    1   M  57.0   2012.8.30        NaN    NaN  Addictive disorder   \n",
+      "1    2   M  37.0    2012.9.6        6.0  120.0  Addictive disorder   \n",
+      "2    3   M  32.0   2012.9.10       16.0  113.0  Addictive disorder   \n",
+      "3    4   M  35.0   2012.10.8       18.0  126.0  Addictive disorder   \n",
+      "4    5   M  36.0  2012.10.18       16.0  112.0  Addictive disorder   \n",
+      "\n",
+      "      specific.disorder  \n",
+      "0  Alcohol use disorder  \n",
+      "1  Alcohol use disorder  \n",
+      "2  Alcohol use disorder  \n",
+      "3  Alcohol use disorder  \n",
+      "4  Alcohol use disorder  \n"
      ]
     }
    ],
@@ -53,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +645,7 @@
     }
    ],
    "source": [
-    "# And convert them to 3d coordinates because mne requires it. \n",
+    "# And convert them to 3d coordinates because MNE requires it. \n",
     "for key in chs.keys():\n",
     "    chs[key]+=[0]\n",
     "chs"
@@ -591,14 +653,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/vk/_vzs395j5h79c_b2kct3ggyc0000gn/T/ipykernel_269/1805351154.py:3: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
+      "/var/folders/vk/_vzs395j5h79c_b2kct3ggyc0000gn/T/ipykernel_1662/1805351154.py:3: RuntimeWarning: Fiducial point nasion not found, assuming identity unknown to head transformation\n",
       "  mont.plot()\n"
      ]
     },
@@ -622,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -922,34 +984,6 @@
     "combined_output\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'visualize_eeg_on_headmap' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_visualization\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m visualize_eeg_headmap \u001b[38;5;28;01mas\u001b[39;00m visualize_eeg_headmap\n\u001b[1;32m      2\u001b[0m visualize_eeg_headmap(combined_output, frequency_band\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdelta\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[0;32m~/Desktop/Neuroscience/Year 2/1st semester/Advenced programming in Python/מטלות בית/python_final_project/src/data_visualization.py:125\u001b[0m\n\u001b[1;32m    121\u001b[0m     evoked\u001b[38;5;241m.\u001b[39mplot_topomap(times\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauto\u001b[39m\u001b[38;5;124m'\u001b[39m, ch_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124meeg\u001b[39m\u001b[38;5;124m'\u001b[39m, show\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    123\u001b[0m \u001b[38;5;66;03m# Example usage:\u001b[39;00m\n\u001b[1;32m    124\u001b[0m \u001b[38;5;66;03m# Assuming combined_output is the DataFrame from the previous function\u001b[39;00m\n\u001b[0;32m--> 125\u001b[0m \u001b[43mvisualize_eeg_on_headmap\u001b[49m(combined_output, frequency_band\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdelta\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'visualize_eeg_on_headmap' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "from src.data_visualization import visualize_eeg_headmap as visualize_eeg_headmap\n",
-    "visualize_eeg_headmap(combined_output, frequency_band='delta')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
