--- a/main.ipynb
+++ b/main.ipynb
@@ -611,15 +611,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Update the original dataframe, after the cleaning.\n",
-    "df = cleaned_df\n",
-    "\n",
-    "# Save the cleaned data to a new csv file. \n",
-    "df.to_csv('/Users/ohadgonen/Desktop/Neuroscience/Year 2/1st semester/Advenced programming in Python/מטלות בית/python_final_project/cleaned_eeg_data.csv', index=False)"
+    "df = cleaned_df"
    ]
   },
   {
