--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -337,17 +337,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop all columns that start with 'COH' since they are not relevant to our analysis.\n",
+    "# Drop all columns that start with 'COH' since they are not relevant to our analysis. We want to work with the raw EEG data. \n",
     "cleaned_df = cleaned_df.loc[:, ~cleaned_df.columns.str.startswith('COH')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "[5 rows x 122 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,12 +630,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q1: What are the characteristic EEG activity of different main psychiatric disorders?"
+    "Q1: What is the characteristic EEG activity of different main psychiatric disorders?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "dict_keys(['delta', 'theta', 'alpha', 'beta', 'gamma', 'highbeta'])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -800,12 +800,12 @@
    "source": [
     "These findings suggest that individuals with mood disorders exhibit significantly increased beta and high-beta activity across multiple brain regions compared to healthy controls.\n",
     "\n",
-    "Beta Waves (12–30 Hz) and High-Beta waves are typically associated with active thinking, problem-solving, and alertness. Excessive beta activity can correlate with anxiety, stress, and hyperarousal, which are often observed in mood disorders like major depressive disorder and bipolar disorder."
+    "Beta Waves (12–30 Hz) and High-Beta (25-30 Hz) waves are typically associated with active thinking, problem-solving, and alertness. Excessive beta activity can correlate with anxiety, stress, and hyperarousal, which are often observed in mood disorders like major depressive disorder and bipolar disorder."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -978,9 +978,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alcohol use disorder shows higher alpha activity compared to behavioral addiction disorder, indicating a greater tendency for relaxation or mental disengagement.\n",
+    "Alcohol use disorder shows higher alpha (8-12 Hz) activity compared to behavioral addiction disorder, indicating a greater tendency for relaxation or mental disengagement.\n",
     "\n",
-    "Behavioral addiction disorder has higher gamma activity, suggesting greater cognitive engagement or stress responses than alcohol use disorder.\n",
+    "Behavioral addiction disorder has higher gamma activity, suggesting greater cognitive engagement than alcohol use disorder.\n",
     "\n",
     "Delta and theta activity are relatively similar between the two disorders, indicating comparable baseline brain processing for these lower frequency bands."
    ]
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1067,7 @@
        "371  alpha.F4  alpha.T4     0.909644"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1228,7 @@
     }
    ],
    "source": [
-    "from src.data_preprocessing import split_data, train_model, evaluate_model, preprocess_data\n",
+    "from src.model import split_data, train_model, evaluate_model, preprocess_data\n",
     "\n",
     "# Running the pipeline\n",
     "df_processed, label_encoders = preprocess_data(df)\n",
@@ -1245,6 +1245,21 @@
     "print(classification_df.to_string()) \n",
     "\n",
     "# We have achieved an accuracy of 0.34, which is not very high. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model has high precision (0.75) but very low recall (0.16) for healthy controls, meaning it correctly identifies them when predicted but misses most actual cases. \n",
+    "\n",
+    "Mood disorders show high recall (0.77) but low precision (0.33), indicating the model frequently misclassifies other disorders as mood disorders. \n",
+    "\n",
+    "Anxiety disorders have high precision (0.67) but low recall (0.13), suggesting the model avoids false positives but fails to detect many actual cases. \n",
+    "\n",
+    "Schizophrenia and OCD perform very poorly (F1-scores of 0.07 and 0.00, respectively), showing that the model struggles to identify these disorders at all.\n",
+    "\n",
+    "The overall accuracy is 34%, indicating significant room for improvement, especially in recall for underrepresented disorders."
    ]
   }
  ],
